--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
       </div>
     </header>
-    <div class="gallery">
+    <div id="portfolio">
       <div class="container">
         <div class="row">
           <div class="categories">
@@ -31,30 +31,28 @@
             <div class="clearfix"></div>
           </div>
         </div>
-
         <div class="row">
-
           <div class="portfolio-items">
-                <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
+
+                <div class="col-sm-6 col-md-4 col-lg-4 wedding">
                   <div class="portfolio-item">
                     <div class="hover-bg"> <a href="img/portfolio/01-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
                       <div class="hover-text">
                     <h4>DreamCards</h4>
                   </div>
                   <img src="img/portfolio/01-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-                </div>
-                </div>
-
-              <div class="col-sm-6 col-md-4 col-lg-4 dinner">
-                <div class="portfolio-item">
-                  <div class="hover-bg"> <a href="img/portfolio/02-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
-                    <div class="hover-text">
-                      <h4>DreamCards</h4>
-                    </div>
-                    <img src="img/portfolio/02-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
                   </div>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
+                <div class="col-sm-6 col-md-4 col-lg-4 wedding">
+                  <div class="portfolio-item">
+                    <div class="hover-bg"> <a href="img/portfolio/02-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                      <div class="hover-text">
+                        <h4>DreamCards</h4>
+                      </div>
+                      <img src="img/portfolio/02-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-4 friends">
                   <div class="portfolio-item">
                     <div class="hover-bg"> <a href="img/portfolio/03-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
                       <div class="hover-text">
@@ -63,7 +61,7 @@
                       <img src="img/portfolio/03-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
                     </div>
                   </div>
-                <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
+                <div class="col-sm-6 col-md-4 col-lg-4 others">
                     <div class="portfolio-item">
                       <div class="hover-bg"> <a href="img/portfolio/04-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
                         <div class="hover-text">
@@ -72,7 +70,7 @@
                         <img src="img/portfolio/04-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
                       </div>
                     </div>
-                <div class="col-sm-6 col-md-4 col-lg-4 dinner">
+                <div class="col-sm-6 col-md-4 col-lg-4 friends">
                       <div class="portfolio-item">
                         <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
                           <div class="hover-text">
@@ -81,7 +79,7 @@
                           <img src="img/portfolio/05-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
                         </div>
                       </div>
-                <div class="col-sm-6 col-md-4 col-lg-4 lunch">
+                <div class="col-sm-6 col-md-4 col-lg-4 wedding">
                         <div class="portfolio-item">
                           <div class="hover-bg"> <a href="img/portfolio/06-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
                             <div class="hover-text">
@@ -90,7 +88,7 @@
                             <img src="img/portfolio/06-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
                           </div>
                         </div>
-                <div class="col-sm-6 col-md-4 col-lg-4 lunch">
+                <div class="col-sm-6 col-md-4 col-lg-4 others">
                           <div class="portfolio-item">
                             <div class="hover-bg"> <a href="img/portfolio/07-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
                               <div class="hover-text">
@@ -99,82 +97,66 @@
                               <img src="img/portfolio/07-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
                             </div>
                           </div>
-        <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/08-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <h4>DreamCards</h4>
-              </div>
-              <img src="img/portfolio/08-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4 dinner">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/09-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <h4>DreamCards</h4>
-              </div>
-              <img src="img/portfolio/09-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4 lunch">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/10-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <h4>DreamCards</h4>
-              </div>
-              <img src="img/portfolio/10-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4 lunch">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/11-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <h4>DreamCards</h4>
-              </div>
-              <img src="img/portfolio/11-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/12-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <h4>DreamCards</h4>
-              </div>
-              <img src="img/portfolio/12-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-      <!--    <div class="gallery-item">
-            <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
-              <div class="portfolio-item">
-                <div class="hover-bg"> <a href="img/portfolio/01-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
-                  <div class="hover-text">
-                    <h4>Dish Name</h4>
-                  </div>
-                  <img src="img/portfolio/01-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
-                <div class="portfolio-item">
-                  <div class="hover-bg"> <a href="img/portfolio/01-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
-                    <div class="hover-text">
-                      <h4>Dish Name</h4>
+                <div class="col-sm-6 col-md-4 col-lg-4 friends">
+                  <div class="portfolio-item">
+                    <div class="hover-bg"> <a href="img/portfolio/08-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                      <div class="hover-text">
+                        <h4>DreamCards</h4>
+                      </div>
+                      <img src="img/portfolio/08-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
                     </div>
-                    <img src="img/portfolio/01-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
                   </div>
-                </div>
+                <div class="col-sm-6 col-md-4 col-lg-4 wedding">
+                  <div class="portfolio-item">
+                    <div class="hover-bg"> <a href="img/portfolio/09-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                      <div class="hover-text">
+                        <h4>DreamCards</h4>
+                      </div>
+                      <img src="img/portfolio/09-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                    </div>
+                  </div>
+                <div class="col-sm-6 col-md-4 col-lg-4 friends">
+                  <div class="portfolio-item">
+                    <div class="hover-bg"> <a href="img/portfolio/10-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                      <div class="hover-text">
+                        <h4>DreamCards</h4>
+                      </div>
+                      <img src="img/portfolio/10-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                    </div>
+                  </div>
+                <div class="col-sm-6 col-md-4 col-lg-4 others">
+                  <div class="portfolio-item">
+                    <div class="hover-bg"> <a href="img/portfolio/11-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                      <div class="hover-text">
+                        <h4>DreamCards</h4>
+                      </div>
+                      <img src="img/portfolio/11-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                    </div>
+                  </div>
+                <div class="col-sm-6 col-md-4 col-lg-4 wedding">
+                  <div class="portfolio-item">
+                    <div class="hover-bg"> <a href="img/portfolio/12-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                      <div class="hover-text">
+                        <h4>DreamCards</h4>
+                      </div>
+                      <img src="img/portfolio/12-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                    </div>
+                  </div>
 
+            </div>
           </div>
--->
         </div>
 
       </div>
 
+    <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
+    
+    <script tyre="text/javascript" src="js/jquery.isotope.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 
   </body>
+
 </html>
