--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>DreamCards Gallery</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+
+    <link rel="stylesheet" type="text/css" href="css/nivo-lightbox/nivo-lightbox.css">
+    <link rel="stylesheet" type="text/css" href="css/nivo-lightbox/default.css">
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
@@ -36,7 +39,7 @@
 
                 <div class="col-sm-6 col-md-4 col-lg-4 wedding">
                   <div class="portfolio-item">
-                    <div class="hover-bg"> <a href="img/portfolio/01-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                    <div class="hover-bg"> <a href="img/portfolio/01-large.jpg" title="Dream cards" data-lightbox-gallery="gallery1">
                       <div class="hover-text">
                     <h4>DreamCards</h4>
                   </div>
@@ -45,7 +48,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-4 wedding">
                   <div class="portfolio-item">
-                    <div class="hover-bg"> <a href="img/portfolio/02-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                    <div class="hover-bg"> <a href="img/portfolio/02-large.jpg" title="Dream cards" data-lightbox-gallery="gallery1">
                       <div class="hover-text">
                         <h4>DreamCards</h4>
                       </div>
@@ -54,7 +57,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-4 friends">
                   <div class="portfolio-item">
-                    <div class="hover-bg"> <a href="img/portfolio/03-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                    <div class="hover-bg"> <a href="img/portfolio/03-large.jpg" title="Dream cards" data-lightbox-gallery="gallery1">
                       <div class="hover-text">
                         <h4>DreamCards</h4>
                       </div>
@@ -63,7 +66,7 @@
                   </div>
                 <div class="col-sm-6 col-md-4 col-lg-4 others">
                     <div class="portfolio-item">
-                      <div class="hover-bg"> <a href="img/portfolio/04-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                      <div class="hover-bg"> <a href="img/portfolio/04-large.jpg" title="Dream cards" data-lightbox-gallery="gallery1">
                         <div class="hover-text">
                           <h4>DreamCards</h4>
                         </div>
@@ -72,7 +75,7 @@
                     </div>
                 <div class="col-sm-6 col-md-4 col-lg-4 friends">
                       <div class="portfolio-item">
-                        <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                        <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Dream cards" data-lightbox-gallery="gallery1">
                           <div class="hover-text">
                             <h4>DreamCards</h4>
                           </div>
@@ -81,7 +84,7 @@
                       </div>
                 <div class="col-sm-6 col-md-4 col-lg-4 wedding">
                         <div class="portfolio-item">
-                          <div class="hover-bg"> <a href="img/portfolio/06-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                          <div class="hover-bg"> <a href="img/portfolio/06-large.jpg" title="Dream cards" data-lightbox-gallery="gallery1">
                             <div class="hover-text">
                               <h4>DreamCards</h4>
                             </div>
@@ -90,7 +93,7 @@
                         </div>
                 <div class="col-sm-6 col-md-4 col-lg-4 others">
                           <div class="portfolio-item">
-                            <div class="hover-bg"> <a href="img/portfolio/07-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                            <div class="hover-bg"> <a href="img/portfolio/07-large.jpg" title="Dream cards" data-lightbox-gallery="gallery1">
                               <div class="hover-text">
                                 <h4>DreamCards</h4>
                               </div>
@@ -99,7 +102,7 @@
                           </div>
                 <div class="col-sm-6 col-md-4 col-lg-4 friends">
                   <div class="portfolio-item">
-                    <div class="hover-bg"> <a href="img/portfolio/08-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                    <div class="hover-bg"> <a href="img/portfolio/08-large.jpg" title="Dream cards" data-lightbox-gallery="gallery1">
                       <div class="hover-text">
                         <h4>DreamCards</h4>
                       </div>
@@ -108,7 +111,7 @@
                   </div>
                 <div class="col-sm-6 col-md-4 col-lg-4 wedding">
                   <div class="portfolio-item">
-                    <div class="hover-bg"> <a href="img/portfolio/09-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                    <div class="hover-bg"> <a href="img/portfolio/09-large.jpg" title="dream cards" data-lightbox-gallery="gallery1">
                       <div class="hover-text">
                         <h4>DreamCards</h4>
                       </div>
@@ -117,7 +120,7 @@
                   </div>
                 <div class="col-sm-6 col-md-4 col-lg-4 friends">
                   <div class="portfolio-item">
-                    <div class="hover-bg"> <a href="img/portfolio/10-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                    <div class="hover-bg"> <a href="img/portfolio/10-large.jpg" title="dream cards" data-lightbox-gallery="gallery1">
                       <div class="hover-text">
                         <h4>DreamCards</h4>
                       </div>
@@ -126,7 +129,7 @@
                   </div>
                 <div class="col-sm-6 col-md-4 col-lg-4 others">
                   <div class="portfolio-item">
-                    <div class="hover-bg"> <a href="img/portfolio/11-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                    <div class="hover-bg"> <a href="img/portfolio/11-large.jpg" title="Dream cards" data-lightbox-gallery="gallery1">
                       <div class="hover-text">
                         <h4>DreamCards</h4>
                       </div>
@@ -135,7 +138,7 @@
                   </div>
                 <div class="col-sm-6 col-md-4 col-lg-4 wedding">
                   <div class="portfolio-item">
-                    <div class="hover-bg"> <a href="img/portfolio/12-large.jpg" title="Dish Name" data-lightbox-gallery="gallery1">
+                    <div class="hover-bg"> <a href="img/portfolio/12-large.jpg" title="Dream cards" data-lightbox-gallery="gallery1">
                       <div class="hover-text">
                         <h4>DreamCards</h4>
                       </div>
@@ -153,7 +156,7 @@
     <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
-    
+    <script type="text/javascript" src="js/nivo-lightbox.js"></script>
     <script tyre="text/javascript" src="js/jquery.isotope.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 
